filestruct/test_data/bad_code/inner_unit_type.stderr
error: FromDir only supports Type::Path types
 --> test_data/bad_code/inner_unit_type.rs
  |
  |     struct F {
  |            ^
